     * Improve recruitment, notably first turn choices and units with poison
       and charge
     * Improved selection of units for village stealing
     * Remove dependency on AI-demos add-on
     * Fix bug when playing on maps with a turn limit
     * Fix bug handling regeneration
     * Minor improvements in switching between castles
     * Add healer support micro AI to improve healer use
   * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
     * This includes AIs for 7 different animal behaviors, bottleneck defense,
       2 different guardians and a coward, healer support, lurkers,
       messenger escort, patrol, protect and move a unit, and 2 alternative
       recruiting strategies.
     * Documentation at http://wiki.wesnoth.org/Micro_AIs
   * New leader_ignores_keep AI aspect that lets AI leader take part in the same
     AI moves as the non-leader units.
   * Rename passive_leader_shares_keep candidate action to leader_shares_keep.
     The old syntax still works for backward compatibility (for both CA and
     macros).
   * Fix minor bug in leader_shares_keep candidate action that occurred
     under some circumstances when the AI leader does not have full MP
 * Campaigns:
   * Sceptre of Fire:
     * Allow game to continue after completing scenario (reported in forums)
   * Son of the Black Eye:
     * Prevent infinite loop if fewer than two transport ships (bug #20389)
 * Graphics:
   * Fix layering error with bridges
 * Language and i18n:
   * Updated translations: British English, French, Galician, Italian, Latin,
     Portuguese, Portuguese (Brazil)
 * Lua API:
   * new wesnoth.get_time_stamp() function
   * new helper.shuffle() function
   * The wesnoth.transform_unit() function no longer performs a full heal. It
     will (still) enforce the resulting unit's maximum hit points, though.
   * The wesnoth.transform_unit() function will automatically remove poison from
     a unit that is immune after transforming.