@@ -12,6 +12,8 @@ Version 1.11.1+svn:
      * Fix bug handling regeneration
      * Minor improvements in switching between castles
      * Add healer support micro AI to improve healer use
+     * Improved village capturing
+     * Retreat badly injured units more effectively
    * New [micro_ai] tag, 18 different Micro AIs, and 14 test scenarios
      * This includes AIs for 7 different animal behaviors, bottleneck defense,
        2 different guardians and a coward, healer support, lurkers,
